# cyclops_paper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
paper/: draft.md  main.tex  references.bib  references_impact_arrhythmia.bib  references_phasemapping.bib
scripts/: analyse_demo.py  analyse_demo_2.py  analyse_phase_defect.py  analyse_reentry.py  analyse_rotor.py  analyse_simulation.py  analyse_suppressed.py  create_demo.py  create_demo_2.py  create_diffuse_fibrosis.py  create_near_complete_rotation.py  create_phase_defect.py  create_reentry.py  create_rotor.py  create_simulation.py  create_suppressed.py  curve_action_pot.py  prepace_tissue.py
seba/: analyze_carto_AT.py  analyze_optical_mapping.py  analyze_simulations.py  test.py
seba/analysis/: analyze.py  analyze_carto_AT.py  analyze_optical_mapping.py  analyze_simulations.py  custom_cyclops_classes.py
seba/analysis/methods/: multi_epm.py
seba/analysis/visualization/: cmaps.py  custom_cyclops_classes.py  plots.py
seba/simulation/: create_simulations.py  custom_fw_classes.py  draw_util.py  setup.py
