[project]
name = "paper-phase-defect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.60.0",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "tqdm>=4.66.5",
    "natsort>=8.4.0",
    "pyvista>=0.44.1",
    "ffmpeg-python>=0.2.0",
    "pandas>=2.2.3",
    "scikit-image>=0.24.0",
    "ipython>=9.3.0",
    "pyqt5>=5.15.11",
    "pyvistaqt>=0.11.2",
    "cyclops",
]

[tool.uv.sources]
cyclops = { path = "../Cyclops", editable = true }
